recursion.logo.tree.Tree.scala.error
Compilation error:
Tree:7: error: value ** is not a member of Double
             r=length**shrink
                     ^